# wallcrawler

./: README.md  References.txt
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: control.pc  gazebo_joint_torsional_spring.pc  magnetic_wheel.pc  object_analytics_msgs.pc  realsense2_camera.pc  realsense2_description.pc  roboclaw_Anish.pc  roboclaw_move.pc  roboclaw_node.pc  velodyne_description.pc  velodyne_gazebo_plugins.pc  wallcrawler_description.pc
install/: _setup_util.py  setup.sh
src/roboclaw_move/: CMakeLists.txt  package.xml
src/roboclaw_move/src/: move.cpp
src/wallcrawler_description/: CMakeLists.txt  package.xml
src/wallcrawler_description/config/: diffdrive.yaml
src/wallcrawler_description/launch/: .gazebo.launch.swp  diffdrive.launch  displayurdf.launch  gazebo.launch  lidar.launch  wallcrawler.launch
src/wallcrawler_description/meshes/dae/: hinge.dae  link.dae  link_hinge.dae  shaft.dae
src/wallcrawler_description/meshes/dae_new/: Payload_box.dae  Payload_hinge.dae  Wheel_hinge.dae
src/wallcrawler_description/meshes/robot_stls/: Base_front.STL  MagneticWheel.STL  Track guiding.stl  Wheel_Assembly_Non_Driven.STL  hinge.STL  link.STL  link_hinge.STL
src/wallcrawler_description/src/: magneticwheel_plugin.cpp
src/wallcrawler_description/urdf/: VLP-16.urdf.xacro  wallcrawler2.gv  wallcrawler2.urdf  wallcrawler3.urdf  wallcrawler3.urdf.xacro  wallcrawler5.urdf.xacro  wallcrawler_L515.urdf.xacro  wallcrawler_lidar.urdf.xacro  wallcrawler_s.urdf.xacro
src/wallcrawler_description/worlds/: frames.gv  wallcrawler.world
(+28 files in other folders)
